vlib/v/checker/tests/generics_too_many_parameters.vv
fn foo<T>(b T) {
    println(b)
}

fn main() {
    foo<bool, int, bool, bool, int>(1)
}
